--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,12 @@ nav ul li a:hover {
 }
 
 .intro-text {
-    font-size: 1.2em;
+    font-size: 1.3em;
     margin: 20px 0;
     color: #CC5500; /* Burnt orange */
+    padding: 30px;
+    font-style: italic;
+    font-weight: 600;
 }
 
 .btn {
@@ -101,11 +104,12 @@ nav ul li a:hover {
 .about {
     padding: 40px 0;
     background-color: #fff;
+    
 }
 
 .about .portrait img {
     width: 30%;
-    border-radius: 50%;
+    border-radius: 10px;
     margin: 40px;
     margin-bottom: 20px;
 }
@@ -119,22 +123,22 @@ nav ul li a:hover {
 
 /* Hobbies Page */
 .hobbies {
-    padding: 40px 0;
+    padding: 50px 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 5px;
 }
 
 .hobby img {
-    width: 100%;
+    width: 95%;
     border-radius: 10px;
-    margin: 40px;
+    margin: 10px;
 }
 
 .hobby p {
     text-align: center;
     color: #333;
-    font-size: 1.1em;
+    font-size: 1.5em;
     margin: 40px;
 }
 
